<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_hint"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_description_hint"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TimePicker
            android:id="@+id/edit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <DatePicker
            android:id="@+id/edit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Duration (Hours)"
            android:inputType="number"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_location_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_location"
            android:inputType="text"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/save_changes_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/edit_location_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
